[package]
name = "rust-junk"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]

[dependencies]
rand = "*"		# temp_converter tests, sdencrypt key generation
time = "*"		# y2sec
rust-crypto = "*" 	# For sdencrypt
base64 = "*" 		# Same
rpassword = "*" 	# Same


[[bin]]
name = "temp_converter"
path = "src/temp_converter/main.rs"

[[bin]]
name = "y2sec"
path = "src/y2sec/main.rs"

[[bin]]
name = "ff_stats"
path = "src/ff_stats/main.rs"

[[bin]]
name = "sdencrypt"
path = "src/sdencrypt/main.rs"
